# COP3530-Project-2

./: CMakeLists.txt  README.md
datasets/: normalized_recipes.json
resources/: Time test for Splay and RB tree.txt
scripts/: normalizer.py
src/: Main.qml  Recipe.h  RedBlackTree.h  RedBlackTreeNode.h  SplayTree.h  TreeNode.h  data.cpp  data.h  main.cpp  recipemodel.cpp  recipemodel.h
